--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		 
 			 
 				<li>
-					<a href="#intership">
+					<a href="#internship">
 						<span>Internship</span>
 					</a>
 				</li>
