--- a/404.html
+++ b/404.html
@@ -104,7 +104,7 @@
 		 
 			 
 				<li>
-					<a href="#intership">
+					<a href="#internship">
 						<span>Internship</span>
 					</a>
 				</li>
